--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@nestjs/common": "^8.1.1",
     "@nestjs/core": "^8.1.1",
     "@nestjs/platform-fastify": "^8.4.5",
+    "fastify": "^3.29.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.4.0"
@@ -31,7 +32,6 @@
     "@nestjs/cli": "^8.1.3",
     "@nestjs/schematics": "^8.0.4",
     "@nestjs/testing": "^8.1.1",
-    "@types/express": "^4.17.13",
     "@types/jest": "^27.0.2",
     "@types/node": "^16.11.1",
     "@types/supertest": "^2.0.11",
