--- a/package.json
+++ b/package.json
@@ -23,9 +23,14 @@
     "@nestjs/common": "^8.1.1",
     "@nestjs/core": "^8.1.1",
     "@nestjs/platform-fastify": "^8.4.5",
+    "@nestjs/sequelize": "^9.0.0",
+
+    "pg": "^8.8.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.4.0"
+    "rxjs": "^7.4.0",
+    "sequelize": "^6.21.4",
+    "sequelize-typescript": "^2.1.3"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.1.3",
@@ -34,6 +39,7 @@
     "@types/jest": "^27.0.2",
     "@types/node": "^16.11.1",
     "@types/supertest": "^2.0.11",
+    "@types/sequelize": "^4.28.14",
     "@typescript-eslint/eslint-plugin": "^4.29.2",
     "@typescript-eslint/parser": "^4.29.2",
     "eslint": "^7.32.0",
