feat(auth) progress
- 패키지 설치
- docs 작성 중
- sequelize model 생성

--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
   "dependencies": {
     "@nestjs/common": "^9.0.11",
     "@nestjs/core": "^9.0.11",
+    "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-fastify": "^9.0.11",
     "@nestjs/sequelize": "^9.0.0",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "pg": "^8.8.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -37,8 +40,9 @@
     "@nestjs/testing": "^9.0.11",
     "@types/jest": "^29.0.0",
     "@types/node": "^18.7.16",
-    "@types/supertest": "^2.0.12",
+    "@types/passport-local": "^1.0.34",
     "@types/sequelize": "^4.28.14",
+    "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.36.2",
     "@typescript-eslint/parser": "^5.36.2",
     "eslint": "^8.23.0",
