--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
   "dependencies": {
     "@nestjs/common": "^9.0.11",
     "@nestjs/core": "^9.0.11",
+    "@nestjs/jwt": "^9.0.0",
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-fastify": "^9.0.11",
     "@nestjs/sequelize": "^9.0.0",
     "passport": "^0.6.0",
+    "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "pg": "^8.8.0",
     "reflect-metadata": "^0.1.13",
@@ -40,6 +42,7 @@
     "@nestjs/testing": "^9.0.11",
     "@types/jest": "^29.0.0",
     "@types/node": "^18.7.16",
+    "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
     "@types/sequelize": "^4.28.14",
     "@types/supertest": "^2.0.12",
